Add StreetNameDetails